# mochineko-music

./: README.md  index.html  package-lock.json  package.json
lyrics/: lyrics_publish.json  plain_lyrics.lrc  publish_lyrics.py  synced_lyrics.lrc
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/commands/: cache.rs  library.rs  mod.rs  player.rs  search.rs  system.rs
src-tauri/src/db/: database.rs
src-tauri/src/models/: cache.rs  config.rs  library.rs  mod.rs  music.rs
src/components/common/: Button.tsx  Input.tsx  Modal.tsx  SettingsModal.tsx  Slider.tsx  TitleBar.tsx
src/components/player/: InlineLyrics.tsx  PlayerBar.tsx
src/components/playlist/: OnlineSearch.tsx  SearchBar.tsx  SongList.tsx
src/services/: api.ts  lyricsService.ts
src/stores/: cacheStore.ts  libraryStore.ts  lyricsStore.ts  onlineMusicStore.ts  playerStore.ts  systemStore.ts
src/styles/: globals.css
src/types/: index.ts
