[package]
name = "mochineko-music"
version = "0.1.0"
description = "A Tauri Music Player"
authors = ["you"]
edition = "2021"

[lib]
name = "mochineko_music_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
tokio = { version = "1", features = ["full"] }
lofty = "0.18"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
log = "0.4"
env_logger = "0.11"
thiserror = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
futures = "0.3"
urlencoding = "2"

